parcial-netinvm/evidencias/p3/fw_iptables.txt
---- CAPTURA LIMPIA ----
spawn sudo virsh console --force fw
Connected to domain 'fw'
Escape character is ^] (Ctrl + ])

^[[c^[[croot@fw:~# iptables -S 2>&1
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT
-A INPUT -p tcp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -p tcp -j ACCEPT
-A INPUT -i lo -p udp -j ACCEPT
-A INPUT -i lo -p icmp -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -p tcp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p udp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p icmp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.5.2.0/24 -i eth-int -o eth-ext -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.5.2.0/24 -i eth-int -o eth-ext -p udp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.5.2.0/24 -i eth-int -o eth-ext -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.5.1.0/24 -d 10.5.0.1/32 -i eth-dmz -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.5.1.0/24 -d 10.5.0.1/32 -i eth-dmz -p tcp -m tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.5.1.0/24 -i eth-dmz -o eth-ext -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 10.5.1.11/32 -o eth-dmz -p tcp -m tcp --dport 20 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 10.5.1.11/32 -o eth-dmz -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 10.5.1.10/32 -o eth-dmz -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 10.5.1.10/32 -o eth-dmz -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
^[[c^[[croot@fw:~# exit
logout
^[[r^[[H^[[3J^[[r^[[H^[[3J
